--- a/iTaxApp/iTaxApp/iTaxApp/LoginPage.xaml
+++ b/iTaxApp/iTaxApp/iTaxApp/LoginPage.xaml
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="iTaxApp.MainPage">
+             x:Class="iTaxApp.LoginPage">
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness"
                     iOS="20, 40, 20, 20"
@@ -14,10 +14,12 @@
                      HorizontalOptions="FillAndExpand"
                      Orientation="Vertical"
                      Spacing="15">
-                <Label Text="iTax" FontSize="Large" XAlign="Center"/>
-                <Button x:Name="getRideButton" Text="Get a ride!" Clicked="OnCreateRide"/>
-                <Button x:Name="myRidesButton" Text="My Rides" Clicked="OnHistory"/>
-                <Button x:Name="settingsButton" Text="Settings" Clicked="OnSettings"/>
+                <Label Text="Login to iTax" FontSize="Large" XAlign="Center"/>
+                <Label Text="Please enter your credentials or register:"/>
+                <Entry x:Name="username" Placeholder="Username"/>
+                <Entry x:Name="password" Placeholder="Password" IsPassword="true"/>
+                <Button x:Name="loginButton" Text="Login" Clicked="OnLogin"/>
+                <Button x:Name="registerButton" Text="Register" Clicked="OnRegister"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
