Reorganized files Android files -> Android project scope and common files -> whole project scope Added Interface for toast (android) messages and a class for implementation Working login now, still needs some clean-up though

--- a/iTaxApp/iTaxApp/iTaxApp.Android/LoginPage.xaml
+++ b/iTaxApp/iTaxApp/iTaxApp.Android/LoginPage.xaml
@@ -20,6 +20,7 @@
                 <Entry x:Name="password" Placeholder="Password" IsPassword="true"/>
                 <Button x:Name="loginButton" Text="Login" Clicked="OnLogin"/>
                 <Button x:Name="registerButton" Text="Register" Clicked="OnRegister"/>
+                <Button x:Name="testButton" Text="Test Connection" Clicked="OnTest"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
