MD5 Encryption added.. Register finished.. Socket working now properly.. Ride page some issues fixed, still needs some work..

--- a/iTaxApp/iTaxApp/iTaxApp.Android/RegisterPage.xaml
+++ b/iTaxApp/iTaxApp/iTaxApp.Android/RegisterPage.xaml
@@ -22,7 +22,7 @@
                 <Entry x:Name="firstname" Placeholder="First Name"/>
                 <Entry x:Name="lastname" Placeholder="Last Name"/>
                 <Picker x:Name="cartype" Title="Select a preferred car type"/>
-                <Label Text="You can change these details in the Setting later."/>
+                <Label Text="You can change these details in the Settings later."/>
                 <Button x:Name="registerButton" Text="Register" Clicked="OnRegister"/>
             </StackLayout>
         </ScrollView>
