--- a/iTaxApp/iTaxApp/iTaxApp.Android/ExtrasPage.xaml
+++ b/iTaxApp/iTaxApp/iTaxApp.Android/ExtrasPage.xaml
@@ -13,7 +13,7 @@
                      HorizontalOptions="FillAndExpand"
                      Orientation="Vertical"
                      Spacing="15">
-              
+                <Label Text="Under construction.."/>
                 <Slider x:Name ="slider" Minimum="0" Maximum="10"/>
                 
             </StackLayout>
