--- a/iTaxApp/iTaxApp/iTaxApp.Android/RidePage.xaml
+++ b/iTaxApp/iTaxApp/iTaxApp.Android/RidePage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
+             xmlns:local="clr-namespace:iTaxApp;assembly=iTaxApp.Android"
              x:Class="iTaxApp.RidePage">
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness"
@@ -25,6 +26,7 @@
                 <Label x:Name="longitude" Text="Longitude: "/>
                 <Label Text="Your destination's GPS coordinates:"/>
                 <Label x:Name="geocodedOutputLabel"/>
+                <local:CustomMap x:Name="customMap" MapType="Street" WidthRequest="320" HeightRequest="200" />
                 <Button x:Name="refreshButton" Text="Calculate route" Clicked="OnRefresh"/>
                 <maps:Map WidthRequest="320" HeightRequest="200"
                     x:Name="MyMap"
