Changed login and login function to match the driver

--- a/iTaxApp/iTaxApp/iTaxApp.Android/LoginPage.xaml
+++ b/iTaxApp/iTaxApp/iTaxApp.Android/LoginPage.xaml
@@ -15,11 +15,10 @@
                      Orientation="Vertical"
                      Spacing="15">
                 <Label Text="Login to iTax" FontSize="Large" XAlign="Center"/>
-                <Label Text="Please enter your credentials or register:"/>
-                <Entry x:Name="username" Placeholder="Username"/>
+                <Label Text="Please enter your credentials"/>
+                <Entry x:Name="userID" Placeholder="User ID"/>
                 <Entry x:Name="password" Placeholder="Password" IsPassword="true"/>
                 <Button x:Name="loginButton" Text="Login" Clicked="OnLogin"/>
-                <Button x:Name="registerButton" Text="Register" Clicked="OnRegister"/>
                 <Button x:Name="testButton" Text="Test Connection" Clicked="OnTest"/>
             </StackLayout>
         </ScrollView>
